<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="64dp"
    android:background="@drawable/background"
    android:padding="10dp">

    <ImageView
        android:id="@+id/imgPushNotif"
        android:layout_width="60dp"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/imageDescription"
        android:src="@mipmap/appicon" />

    <TextView
        android:id="@+id/tvHeaderPushNotif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/imgPushNotif"
        android:layout_toRightOf="@id/imgPushNotif"
        android:text="@string/tvHeaderPushNotif"
        android:textColor="@color/colorHeaderText"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvBodyPushNotif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvHeaderPushNotif"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@id/imgPushNotif"
        android:layout_toRightOf="@id/imgPushNotif"
        android:lines="1"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:text="@string/tvNotifPushNOtif"
        android:textColor="@color/colorHeaderText"
        android:textSize="13sp" />
</RelativeLayout>