<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrlvParentAddNotes"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:fillViewport="true"
    tools:context=".addnotes">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cstlMother"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView43"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="serif"
            android:text="@string/tvHeaderAddNotes"
            android:textColor="@color/colorHeaderText"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout19"
            android:layout_width="340dp"
            android:layout_height="284dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/rectangle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView43"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="0px"
                android:focusable="true"
                android:focusableInTouchMode="true"
                tools:ignore="UselessLeaf" />

            <EditText
                android:id="@+id/etNotesAddNotes"
                android:layout_width="310dp"
                android:layout_height="190dp"
                android:layout_marginTop="25dp"
                android:autofillHints=""
                android:background="@drawable/textviewbackground"
                android:fontFamily="serif"
                android:gravity="top"
                android:hint="@string/etInputAddNotes"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:targetApi="o" />

            <Button
                android:id="@+id/btnSubmitAddNotes"
                android:layout_width="170dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/registerbutton"
                android:fontFamily="serif-monospace"
                android:text="@string/btnSubmitAddNotes"
                android:textColor="@color/colorBtnText"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etNotesAddNotes"
                app:layout_constraintVertical_bias="0.0" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/btnBarAddNotes"
            android:layout_width="340dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="9dp"
            android:background="@drawable/btnindextab"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout19"
            app:layout_constraintVertical_bias="1.0">

            <ImageView
                android:id="@+id/btnLeftAddNotes"
                android:layout_width="28dp"
                android:layout_height="25dp"
                android:layout_marginEnd="120dp"
                android:layout_marginRight="120dp"
                android:contentDescription="@string/imgLeftArrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnLeftUpAddNotes"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/left" />

            <ImageView
                android:id="@+id/btnRightAddNotes"
                android:layout_width="28dp"
                android:layout_height="25dp"
                android:layout_marginStart="120dp"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/imgRightArrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/btnLeftUpAddNotes"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/right" />

            <ImageView
                android:id="@+id/btnLeftUpAddNotes"
                android:layout_width="26dp"
                android:layout_height="28dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/imgUpArrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/up" />
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>


</ScrollView>